# krucible

./: .firebaserc  .gitignore  BETA_LAUNCH_CHECKLIST.md  BETA_STABILITY_FIXES_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_ARCHITECTURE_REPORT.md  COMPLIANCE_IMPLEMENTATION_REPORT.md  CONTRIBUTING.md  COPY_PASTE_IMPLEMENTATIONS.md  DELETION_REPORT.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_COMPLIANCE_AUDIT.md  LICENSE  NOTIFICATION_AUDIT_REPORT.md  QUICK_FIX_GUIDE.md  README.md  REAL_USER_BETA_AUDIT.md  SECURITY.md  android-debug.keystore  app.json  audit.js  firestore.rules  fix_icon.js  fix_index.js  fix_index2.js  fix_rules.js  google-services.json  localization_audit_report.md  make_admin.js  output.txt  package-lock.json  package.json  pyproject.toml  react-native.config.js  refactor_index.js  send-all-tests.js  send-test-email.js  send-test-push.js  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.krucible/attacks/: injection.yml  prompt_injection.yml
.krucible/policies/: pii.yml  safety.yml
admin/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
admin/src/: App.tsx  firebase.ts  index.css
admin/src/pages/: Businesses.tsx  Communities.tsx  Notifications.tsx  Posts.tsx  Premium.tsx  Providers.tsx  SOS.tsx  Security.tsx  Settings.tsx  Users.tsx
admin/src/utils/: firestore.ts
functions/: index.js  make_admin.js  package-lock.json  package.json  test-toggle.js
scripts/: fix_syntax.js
src/app/: _layout.tsx  about.tsx  index.tsx  notifications.tsx  search.tsx
src/app/chat/: [id].tsx  (+1 more)
src/constants/: categories.ts  colors.ts  emergencyNumbers.ts  mockData.ts
src/hooks/: useLocationGuard.ts  useNotifications.ts  useOnlinePresence.ts  useSOSHaptics.ts  useTypingIndicatorCleanup.ts  useUnreadChats.ts
src/krucible/: __init__.py  __main__.py
src/locales/: i18n.ts
src/services/: authService.ts  businessService.ts  chatService.ts  cloudinaryService.ts  commentService.ts  communityService.ts  emailService.ts  firebase.ts  languageService.ts  locationMonitorService.ts  locationService.ts  notificationService.ts  postService.ts  providerService.ts  securityService.ts  sosService.ts  trustSafetyService.ts  userService.ts
src/store/: appStore.ts  uiStore.ts
src/types/: firebase.d.ts  roles.ts
src/utils/: distance.ts  security.ts
tests/: __init__.py  test_adapter_custom.py  test_adapter_gemini.py  test_adapter_openai.py  test_attack_runner.py  test_cli.py  test_cli_doctor.py  test_cli_init.py  test_cli_startup.py  test_cli_test.py  test_cli_version.py  test_config_loader.py  test_core_project_init.py  test_domain_models.py  test_evaluation_pipeline.py  test_loaders.py  test_policy_engine.py  test_quickstart.py  test_regression_engine.py  test_report_engine.py
(+135 files in other folders)
