[project]
name = "krucible"
version = "0.1.1"
description = "AI Security Regression Testing Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Badshah-Jan", email = "badshahkha656@gmail.com" }
]
keywords = ["security", "ai", "llm", "testing", "regression", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "openai>=1.14.0",
    "google-genai>=0.1.0",
    "anthropic>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/Badshah-Jan/krucible"
Repository = "https://github.com/Badshah-Jan/krucible.git"
[project.scripts]
krucible = "krucible.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F841", "F401"]
